--- a/WPFSipBiteUnite/AuthView.xaml
+++ b/WPFSipBiteUnite/AuthView.xaml
@@ -75,7 +75,7 @@
                         FontFamily="Montserrat"
                         Cursor="Hand"
                         Grid.Column="2"
-                        Click="btnClose_Click">
+                        Click="BtnClose_Click">
                     <Button.Style>
                         <Style TargetType="Button">
                             <Setter Property="Background" Value="{StaticResource Neutral700Brush}" />
@@ -134,7 +134,7 @@
                          Height="28"
                          VerticalContentAlignment="Center"
                          Margin="0,8,0,0"
-                         Padding="0,0,0,0" TextChanged="txtUser_TextChanged">
+                         Padding="0,0,0,0" TextChanged="TxtUser_TextChanged">
                     <TextBox.BorderBrush>
                         <SolidColorBrush Color="{DynamicResource Neutral400}" />
                     </TextBox.BorderBrush>
@@ -201,7 +201,7 @@
                             Content="Зареєструватися"
                             Margin="32,0,0,0"
                             Cursor="Hand"
-                            Click="btnRegister_Click"
+                            Click="BtnRegister_Click"
                             Width="200"
                             Height="44"
                             FontFamily="Montserrat"
