--- a/WPFSipBiteUnite/LoginView.xaml
+++ b/WPFSipBiteUnite/LoginView.xaml
@@ -74,7 +74,7 @@
                         FontFamily="Montserrat"
                         Cursor="Hand"
                         Grid.Column="2"
-                        Click="btnClose_Click">
+                        Click="BtnClose_Click">
                     <Button.Style>
                         <Style TargetType="Button">
                             <Setter Property="Background" Value="{StaticResource Neutral700Brush}" />
@@ -133,7 +133,7 @@
                          Height="28"
                          VerticalContentAlignment="Center"
                          Margin="0,8,0,0"
-                         Padding="0,0,0,0" TextChanged="txtUser_TextChanged">
+                         Padding="0,0,0,0" TextChanged="TxtUser_TextChanged">
                     <TextBox.BorderBrush>
                         <SolidColorBrush Color="{DynamicResource Neutral400}" />
                     </TextBox.BorderBrush>
@@ -158,7 +158,7 @@
                 <Button x:Name="btnLogin"
                         Command="{Binding LoginCommand}"
                         Content="Увійти"
-                        Click="btnLogin_Click"
+                        Click="BtnLogin_Click"
                         Margin="0,48,0,0"
                         Cursor="Hand"
                         Height="44"
@@ -201,7 +201,7 @@
                             Content="Зареєструватися"
                             Margin="32,0,0,0"
                             Cursor="Hand"
-                            Click="btnRegister_Click"
+                            Click="BtnRegister_Click"
                             Width="200"
                             Height="44"
                             FontFamily="Montserrat"
