--- a/WPFSipBiteUnite/MainView.xaml
+++ b/WPFSipBiteUnite/MainView.xaml
@@ -142,7 +142,7 @@
                                 FontSize="16"
                                 FontFamily="Montserrat"
                                 Cursor="Hand"
-                                Click="btnMinimize_Click">
+                                Click="BtnMinimize_Click">
                             <Button.Style>
                                 <Style TargetType="Button">
                                     <Setter Property="Background" Value="{StaticResource Neutral800Brush}" />
@@ -172,7 +172,7 @@
                                 FontFamily="Montserrat"
                                 Cursor="Hand"
                                 Margin="12, 0, 0,0"
-                                Click="btnClose_Click">
+                                Click="BtnClose_Click">
                             <Button.Style>
                                 <Style TargetType="Button">
                                     <Setter Property="Background" Value="{StaticResource PrimaryBrush}" />
