--- a/WPFSipBiteUnite/BeersExploreView.xaml
+++ b/WPFSipBiteUnite/BeersExploreView.xaml
@@ -25,11 +25,16 @@
                             <!-- Customize the appearance of each beer item with a rounded border and padding -->
                             <Border Background="#1D1D1F" Margin="5" CornerRadius="10" Padding="10" Width="270">
                                 <StackPanel>
-                                    <!-- Assuming Beer has properties named BeerName, BeerProducer, BeerPhotoURL -->
-                                    <Image Source="{Binding BeerPhotoURL}" Width="150" Height="200" />
+
+                                    <Image Source="{Binding BeerPhotoURL}" Height="200" Stretch="UniformToFill">
+                                        <Image.Clip>
+                                            <RectangleGeometry RadiusX="8" RadiusY="8" Rect="0,0,270,200"/>
+                                        </Image.Clip>
+                                    </Image>
+
                                     <TextBlock Text="{Binding BeerName}" FontSize="20" FontWeight="Bold" FontFamily="Montserrat" Foreground="White" Margin="0,5,0,0" HorizontalAlignment="Center"/>
-                                    <TextBlock Text="{Binding BeerProducer}" FontSize="14" FontWeight="SemiBold" FontFamily="Montserrat" Foreground="#E1E2E5" Margin="0,30,0,0" HorizontalAlignment="Center"/>
-                                    <Button Content="Купити" Height="44" Margin="0,10,0,0" 
+                                    <TextBlock Text="{Binding BeerProducer}" FontSize="14" FontWeight="SemiBold" FontFamily="Montserrat" Foreground="#E1E2E5" Margin="0,12,0,0" HorizontalAlignment="Center"/>
+                                    <Button Content="Детальніше" Height="44" Margin="0,10,0,0" 
                                             Background="{StaticResource PrimaryBrush}" 
                                             FontFamily="Montserrat" 
                                             FontSize="18" 
