--- a/WPFSipBiteUnite/DishesExploreView.xaml
+++ b/WPFSipBiteUnite/DishesExploreView.xaml
@@ -23,27 +23,37 @@
                         <DataTemplate>
                             <!-- Customize the appearance of each dish item with a rounded border and padding -->
                             <Border Background="#1D1D1F" Margin="5" CornerRadius="10" Padding="10" Width="270">
+
                                 <StackPanel>
-                                    <Image Source="{Binding FoodPhotoURL}" Width="150" Height="200" />
+                                    <Image Source="{Binding FoodPhotoURL}" Height="200" Stretch="UniformToFill">
+                                        <Image.Clip>
+                                            <RectangleGeometry RadiusX="8" RadiusY="8" Rect="0,0,270,200"/>
+                                        </Image.Clip>
+                                    </Image>
+
                                     <TextBlock Text="{Binding FoodName}" FontSize="20" FontWeight="Bold" FontFamily="Montserrat" Foreground="White" Margin="0,5,0,0" HorizontalAlignment="Center"/>
 
-                                    <Button Content="Order" Height="44" Margin="0,10,0,0" 
-                                        Background="{StaticResource PrimaryBrush}" 
-                                        FontFamily="Montserrat" 
-                                        FontSize="18" 
-                                        FontWeight="Medium" 
-                                        Foreground="{StaticResource NeutralWhiteBrush}">
+                                    <TextBlock Text="{Binding FoodCategory}" FontSize="14" FontWeight="SemiBold" FontFamily="Montserrat" Foreground="#E1E2E5" Margin="0,12,0,0" HorizontalAlignment="Center"/>
+                                    
+                                    <Button Content="Детальніше" Height="44" Margin="0,10,0,0" 
+                                            Background="{StaticResource PrimaryBrush}" 
+                                            FontFamily="Montserrat" 
+                                            FontSize="18" 
+                                            FontWeight="Medium" 
+                                            Foreground="{StaticResource NeutralWhiteBrush}">
                                         <Button.Template>
                                             <ControlTemplate TargetType="Button">
                                                 <Border CornerRadius="6"
-                                                    Background="{TemplateBinding Background}">
+                                                        Background="{TemplateBinding Background}">
                                                     <ContentPresenter VerticalAlignment="Center"
-                                                                  HorizontalAlignment="Center" />
+                                                                      HorizontalAlignment="Center" />
                                                 </Border>
                                             </ControlTemplate>
                                         </Button.Template>
                                     </Button>
+
                                 </StackPanel>
+
                             </Border>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
